[package]
name = "ghost_link_scanner"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.28", features = ["derive"] }
prettytable = "0.10.0"
reqwest = { version = "0.12.12", features = ["rustls-tls"] }
scraper = "0.22.0"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2.5.4"
